--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,17 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display');
 
-.App-logo {
-  height: 40vmin;
+.home-logo {
+  height: 400px;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.other-logo {
+  height: 400px;
+  pointer-events: none;
 }
 
-.App-header {
-  background-color: #282c34;
+.Home-header {
+  background-color: black;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -22,9 +19,62 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  font-family: 'Playfair Display';
 }
 
-.App-link {
+body {
+  background-color: white;
+  font-family: 'Playfair Display';
+  overflow-x: hidden;
+  color: black;
+}
+
+header {
+  padding-top: 40px;
+  padding-left: 100px;
+  background-color: white;
+  font-family: 'Playfair Display';
+  overflow-x: hidden;
+  color: black;
+  text-align: left;
+}
+
+h1 {
+  font-size: 45px;
+}
+
+
+.error {
+  background-color: white;
+  font-family: 'Playfair Display';
+  overflow-x: hidden;
+  color: black;
+  text-align: center;
+  padding-top: 300px;
+}
+
+.tiles {
+  background-color: black;
+  color: white;
+  display: grid;
+  column-gap: 15px;
+  grid-template-columns: repeat(auto-fit, minimax(200px, 1fr));
+}
+
+
+/* .App-header {
+  background-color: black;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  font-family: 'Playfair Display';
+} */
+
+/* .App-link {
   color: #61dafb;
 }
 
@@ -35,4 +85,67 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+
+
+/* css help */
+
+.xop-section {
+	max-width: 960px;
+	margin: 0 auto;
+	padding: 6% 2%;
+}
+
+.xop-grid {
+	margin: 20px 0 0 0;
+	padding: 0;
+	list-style: none;
+	display: block;
+	text-align: center;
+	width: 100%;
+}
+
+.xop-grid:after {
+	clear: both;
+}
+
+.xop-grid:after, .xop-box:before {
+	content: '';
+	display: table;
+}
+
+.xop-grid li {
+	width: 328px;
+	height: 328px;
+	display: inline-block;
+	margin: 20px;
+  background-color: black;
+  color: white;
+  border-radius: 10px;
+}
+
+.xop-info {
+	position: absolute;
+	width: inherit;
+	height: inherit;
+}
+
+.xop-info h3 {
+	font-family: 'Playfair Display';
+	font-weight: 400;
+	color: #fff;
+	font-size: 42px;
+	margin: 0 30px;
+	padding: 100px 0 0 0;
+	line-height: 1.5;
+}
+
+.xop-info p {
+	font-family: 'Playfair Display';
+	color: #fff;
+	padding: 4px 5px;
+	margin: 0 30px;
+	font-size: 14px;
+	line-height: 2;
 }
