--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,29 @@
-@import url('https://fonts.googleapis.com/css?family=Playfair+Display');
+@import url("https://fonts.googleapis.com/css?family=Playfair+Display");
 
-.home-logo {
-  height: 400px;
-  pointer-events: none;
-}
-
-.other-logo {
-  height: 400px;
-  pointer-events: none;
-}
-
-.Home-header {
-  background-color: black;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-  font-family: 'Playfair Display';
-}
-
-body {
+.error {
+  padding-top: 25%;
+  padding-left: 40%;
   background-color: white;
-  font-family: 'Playfair Display';
+  font-family: "Playfair Display";
   overflow-x: hidden;
   color: black;
+  text-align: left;
 }
 
 header {
-  padding-top: 40px;
-  padding-left: 100px;
+  padding-top: 80px;
+  padding-left: 120px;
   background-color: white;
-  font-family: 'Playfair Display';
+  font-family: "Playfair Display";
   overflow-x: hidden;
   color: black;
+  text-align: left;
+}
+
+.logo {
+  max-width: 100%;
+  overflow-x: hidden;
+  background-color: black;
   text-align: left;
 }
 
@@ -43,109 +31,214 @@ h1 {
   font-size: 45px;
 }
 
-
-.error {
+body {
+  width: 100vw;
+  height: 100vh;
   background-color: white;
-  font-family: 'Playfair Display';
-  overflow-x: hidden;
+  font-family: "Playfair Display";
   color: black;
-  text-align: center;
-  padding-top: 300px;
 }
 
-.tiles {
-  background-color: black;
-  color: white;
+/*Cards*/
+.wrapper {
+  position: static;
+  width: auto;
   display: grid;
-  column-gap: 15px;
-  grid-template-columns: repeat(auto-fit, minimax(200px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-column-gap: 6px;
+  grid-row-gap: 6px;
+  padding: 10px;
 }
 
+.card {
+  display: grid;
+  grid-template-rows: 200px 80px;
+  grid-template-areas: "text" "stats";
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
 
-/* .App-header {
-  background-color: black;
-  min-height: 100vh;
+  border-radius: 18px;
+  background: white;
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.9);
+  font-family: "Playfair Display";
+  text-align: center;
+
+  transition: 0.5s ease;
+  cursor: pointer;
+  margin: 30px;
+}
+
+.card-text {
+  grid-area: text;
+  margin: 25px;
+}
+
+.card-text .date {
+  color: darkgray;
+  font-size: 13px;
+}
+
+.card-text p {
+  color: grey;
+  font-size: 15px;
+  font-weight: 300;
+}
+
+.card-text h2 {
+  margin-top: 0px;
+  font-size: 28px;
+}
+.card-stats {
+  grid-area: stats;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  background: black;
+}
+.card-stats .stat {
+  padding: 10px;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-direction: column;
   color: white;
-  font-family: 'Playfair Display';
-} */
-
-/* .App-link {
-  color: #61dafb;
+}
+.card-stats .border {
+  border-left: 1px solid darkgray;
+  border-right: 1px solid darkgray;
+}
+.card-stats .value {
+  font-size: 22px;
+  font-weight: 500;
+}
+.card-stats .value sup {
+  font-size: 12px;
+}
+.card-stats .type {
+  font-size: 11px;
+  font-weight: 300;
+  text-transform: uppercase;
+}
+.card:hover {
+  transform: scale(1.15);
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.6);
 }
 
-@keyframes App-logo-spin {
+/*Navbar*/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+nav {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 8vh;
+  background-color: black;
+  font-family: "Playfair Display";
+}
+
+.logo {
+  color: white;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  font-size: 20px;
+}
+
+.nav-links {
+  display: flex;
+  justify-content: space-around;
+  width: 30%;
+}
+
+.nav-links li {
+  list-style: none;
+}
+
+.nav-links a {
+  color: white;
+  text-decoration: none;
+  letter-spacing: 3px;
+  font-weight: bold;
+  font-size: 14px;
+}
+
+.burger {
+  display: none;
+}
+
+.burger div {
+  width: 25px;
+  height: 3px;
+  color: white;
+  margin: 5px;
+  transition: all 0.3s ease;
+}
+
+@media screen and (max-width: 1024px) {
+  .nav-links {
+    width: 60%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  body {
+    overflow-x: hidden;
+  }
+
+  .nav-links {
+    position: fixed;
+    right: 0px;
+    height: 92vh;
+    top: 8vh;
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+    transform: translateX(100%);
+    transition: transform 0.5s ease-in;
+  }
+
+  .nav-links li {
+    opacity: 0;
+  }
+
+  .burger {
+    display: block;
+    cursor: pointer;
+  }
+}
+
+.nav-active {
+  transform: translateX(0%);
+}
+
+@keyframes navLinkFade {
   from {
-    transform: rotate(0deg);
+    opacity: 0;
+    transform: translateX(50px);
   }
   to {
-    transform: rotate(360deg);
+    opacity: 1;
+    transform: translateX(0);
   }
-} */
-
-
-
-/* css help */
-
-.xop-section {
-	max-width: 960px;
-	margin: 0 auto;
-	padding: 6% 2%;
 }
 
-.xop-grid {
-	margin: 20px 0 0 0;
-	padding: 0;
-	list-style: none;
-	display: block;
-	text-align: center;
-	width: 100%;
+.toggle .line1 {
+  transform: rotate(-45deg) translate(-5px, 6px);
 }
 
-.xop-grid:after {
-	clear: both;
+.toggle .line2 {
+  opacity: 0;
 }
 
-.xop-grid:after, .xop-box:before {
-	content: '';
-	display: table;
-}
-
-.xop-grid li {
-	width: 328px;
-	height: 328px;
-	display: inline-block;
-	margin: 20px;
-  background-color: black;
-  color: white;
-  border-radius: 10px;
-}
-
-.xop-info {
-	position: absolute;
-	width: inherit;
-	height: inherit;
-}
-
-.xop-info h3 {
-	font-family: 'Playfair Display';
-	font-weight: 400;
-	color: #fff;
-	font-size: 42px;
-	margin: 0 30px;
-	padding: 100px 0 0 0;
-	line-height: 1.5;
-}
-
-.xop-info p {
-	font-family: 'Playfair Display';
-	color: #fff;
-	padding: 4px 5px;
-	margin: 0 30px;
-	font-size: 14px;
-	line-height: 2;
+.toggle .line3 {
+  transform: rotate(45deg) translate(-5px, -6px);
 }
