--- a/src/App.css
+++ b/src/App.css
@@ -312,36 +312,6 @@ body {
   box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.5);
 }
 
-
-/* .item-container .item-image img {
-  height: 430px;
-  width: 100%;
-}
-
-.item-image {
-  position: absolute;
-  z-index: 1;
-}
-
-.item-details {
-  position: absolute;
-  bottom: 0;
-  margin-bottom: 15px;
-  margin-left: 20px;
-}
-
-.item-name {
-  font-size: 10px;
-  font-weight: 700;
-  text-transform: uppercase;
-}
-
-.item-price {
-  font-size: 25px;
-  font-weight: 700;
-  color: #0b8a6d;
-} */
-
 .checkout {
   height: 430px;
   background: black;
@@ -435,6 +405,7 @@ input[type=month]::-webkit-calendar-picker-indicator {
 .loginbody {
   background: black;
   width: 100%;
+  height: max-content;
   font-family: "Playfair Display";
   letter-spacing: 2px;
   align-items: center;
@@ -569,6 +540,26 @@ input[type=month]::-webkit-calendar-picker-indicator {
   width: 100%;
   height: 40px;
   margin-top: 100px;
+  color: white;
+  font-size: 20px;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-shadow: 0px 2px rgba(0, 0, 0, 0.2);
+  letter-spacing: 1.5px;
+  cursor: pointer;
+}
+
+
+.withdraw-btn {
+  background: linear-gradient(0deg, #019875, #029875);
+  font-family: "Playfair Display";
+  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
+  border: 0;
+  border-radius: 5px;
+  width: 20%;
+  height: 40px;
+  margin-top: 100px;
+  margin-left: 80%;
   color: white;
   font-size: 20px;
   font-weight: 700;
